<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Deslizamientos"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Deslizamientos"
    android:orientation="vertical"
    android:background="@color/deslizamiento_color">
    <TextView
        style="@style/title_card"
        android:text="@string/title_deslizamientos" />
    <ImageView
        style="@style/image_card"
        android:src="@drawable/deslizamiento"
        />
    <ScrollView
        android:id="@+id/sv_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                style="@style/subTitle_card"
                android:text="@string/antes"
                />
            <TextView
                style="@style/text_card"
                android:text="@string/antes_volcanes_1"/>
            <TextView
                style="@style/text_card"
                android:text="@string/antes_volcanes_2"/>
            <TextView
                style="@style/text_card"
                android:text="@string/antes_volcanes_3"/>
            <TextView
                style="@style/text_card"
                android:text="@string/antes_volcanes_4"/>
            <TextView
                style="@style/text_card"
                android:text="@string/antes_volcanes_5"/>
            <TextView
                style="@style/text_card"
                android:text="@string/antes_volcanes_6"/>
            <TextView
                style="@style/subTitle_card"
                android:text="@string/durante"/>
            <TextView
                style="@style/text_card"
                android:text="@string/durante_volcanes_1"/>
            <TextView
                style="@style/text_card"
                android:text="@string/durante_volcanes_2"/>
            <TextView
                style="@style/text_card"
                android:text="@string/durante_volcanes_3"/>
            <TextView
                style="@style/text_card"
                android:text="@string/durante_volcanes_4"/>
            <TextView
                style="@style/text_card"
                android:text="@string/durante_volcanes_5"/>
            <TextView
                style="@style/text_card"
                android:text="@string/durante_volcanes_6"/>
            <TextView
                style="@style/text_card"
                android:text="@string/durante_volcanes_7"/>
            <TextView
                style="@style/text_card"
                android:text="@string/durante_volcanes_8"/>
            <TextView
                style="@style/subTitle_card"
                android:text="@string/despues"/>
            <TextView
                style="@style/text_card"
                android:text="@string/despues_volcanes_1"/>
            <TextView
                style="@style/text_card"
                android:text="@string/despues_volcanes_2"/>
            <TextView
                style="@style/text_card"
                android:text="@string/despues_volcanes_3"/>
            <TextView
                style="@style/text_card"
                android:text="@string/despues_volcanes_4"/>
            <TextView
                style="@style/text_card"
                android:text="@string/despues_volcanes_5"/>
            <TextView
                style="@style/text_card"
                android:text="@string/despues_volcanes_6"/>
            <TextView
                style="@style/text_card"
                android:text="@string/despues_volcanes_7"/>
        </LinearLayout>

    </ScrollView>
</LinearLayout>