<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <ScrollView
        android:id="@+id/sv_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                style="@style/style_button"
                android:id="@+id/custom_button_1"
                android:background="@color/volcan_color"
                android:drawableLeft="@drawable/custom_button_volcan"
                android:text="@string/title_erupciones"
                android:textSize="20dp"
                />

            <Button
                style="@style/style_button"
                android:id="@+id/custom_button_2"
                android:background="@color/incendio_color"
                android:drawableLeft="@drawable/custom_button_incendio"
                android:text="@string/title_incendios"
                android:textSize="20dp"/>

            <Button
                style="@style/style_button"
                android:id="@+id/custom_button_3"
                android:background="@color/teremoto_color"
                android:drawableLeft="@drawable/custom_button_terremoto"
                android:text="@string/title_terremotos"
                android:textSize="20dp" />

            <Button
                style="@style/style_button"
                android:id="@+id/custom_button_4"
                android:background="@color/inumdacion_color"
                android:drawableLeft="@drawable/custom_button_inundacion"
                android:text="@string/title_inundaciones"
                android:textSize="20dp"/>

            <Button
                style="@style/style_button"
                android:id="@+id/custom_button_5"
                android:background="@color/deslizamiento_color"
                android:drawableLeft="@drawable/custom_button_deslizamiento"
                android:text="@string/title_deslizamientos"
                android:textSize="20dp"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>