<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/InicioFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".InicioFragment"
    android:background="@drawable/volcan">

    <include
        layout="@layout/merge_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ScrollView
        android:id="@+id/sv_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/custom_button_1"
                style="@style/style_button"
                android:background="@color/volcan_color"
                android:drawableLeft="@drawable/custom_button_volcan"
                android:text="@string/title_erupciones"
                android:textSize="20dp"
                />

            <Button
                android:id="@+id/custom_button_2"
                style="@style/style_button"
                android:background="@color/incendio_color"
                android:drawableLeft="@drawable/custom_button_incendio"
                android:text="@string/title_incendios"
                android:textSize="20dp" />

            <Button
                android:id="@+id/custom_button_3"
                style="@style/style_button"
                android:background="@color/teremoto_color"
                android:drawableLeft="@drawable/custom_button_terremoto"
                android:text="@string/title_terremotos"
                android:textSize="20dp" />

            <Button
                android:id="@+id/custom_button_4"
                style="@style/style_button"
                android:background="@color/inumdacion_color"
                android:drawableLeft="@drawable/custom_button_inundacion"
                android:text="@string/title_inundaciones"
                android:textSize="20dp" />

            <Button
                android:id="@+id/custom_button_5"
                style="@style/style_button"
                android:background="@color/deslizamiento_color"
                android:drawableLeft="@drawable/custom_button_deslizamiento"
                android:text="@string/title_deslizamientos"
                android:textSize="20dp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>