<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menu"
    app:layout_constraintTop_toBottomOf="@id/toggleButton">
    <com.google.android.material.button.MaterialButtonToggleGroup
        android:layout_marginTop="10dp"
        android:id="@+id/toggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        tools:ignore="MissingConstraints">
        <Button
            style="?attr/materialButtonOutlinedStyle"
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inicio"
            android:background="@color/white"
            android:textSize="20dp"
            android:padding="5dp"
            />
        <Button
            style="?attr/materialButtonOutlinedStyle"
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mapa"
            android:background="@color/white"
            android:textSize="20dp"
            android:padding="5dp"

            />

        <Button
            style="?attr/materialButtonOutlinedStyle"
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emergencia"
            android:background="@color/white"
            android:textSize="20dp"
            android:padding="5dp"

            />

    </com.google.android.material.button.MaterialButtonToggleGroup>
</merge>